--- a/features/chat/src/main/AndroidManifest.xml
+++ b/features/chat/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.liveapp.features.chat">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
