--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,5 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: debug-apk
-        path: app/build/outputs/apk/debug/*.apk
+        # CORREÇÃO: O padrão ** busca recursivamente dentro das pastas dos flavors
+        path: app/build/outputs/apk/**/debug/*.apk
